--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "d3-collection": "^1.0.7",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-xlsx": "^0.15.0"
   }
