--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.652.0",
     "axios": "^0.19.2",
     "d3-collection": "^1.0.7",
     "lodash": "^4.17.15",
