--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron:  '0 20 * * *'
+#   schedule:
+#     - cron:  '0 20 * * *'
 
 jobs:
   scrape:
